--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,25 @@
-<h2>Sign up</h2>
+<div class='w400'>
+  <div class='shadowed-box'>
+    <h2>Sign Up</h2>
+    <div class='border-bottom'></div>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
 
-  <p><%= f.label :handle %><br />
-  <%= f.text_field :handle %></p>
+    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
 
-  <p><%= f.label :password %><br />
-  <%= f.password_field :password %></p>
+      <p><%= f.label :handle %><br />
+      <%= f.text_field :handle %></p>
 
-  <p><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></p>
+      <p><%= f.label :password %><br />
+      <%= f.password_field :password %></p>
 
-  <p><%= f.submit "Sign up" %></p>
-<% end %>
+      <p><%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation %></p>
 
-<%= render :partial => "devise/shared/links" %>
+      <p><%= f.submit "Sign up" %></p>
+    <% end %>
+
+    <%= render :partial => "devise/shared/links" %>
+
+  </div>
+</div>
