--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
       .login
         = login_nav(current_user)
       .gt-logo
-        Task Tracker
+        CyberCTF
       .gt-nav
         %ul
           %li= nav_link("Challenges", challenges_path, :challenges)
